Etapa2/src/Exe5/MyNewGrammar.jj
options
{
  JDK_VERSION = "1.5";
  DEBUG_PARSER = false;
  DEBUG_TOKEN_MANAGER = false;
}

PARSER_BEGIN(CalculadoraDeValoresLogicos)
package Exe5;
import java.io.*;

public class CalculadoraDeValoresLogicos
{
  public static void main(String args []) throws ParseException
  {
    CalculadoraDeValoresLogicos analisador = null;
    try
    {
      analisador = new CalculadoraDeValoresLogicos(new FileInputStream("prog_fonte.my"));
      analisador.inicio();
    }
    catch (FileNotFoundException e)
    {
      System.out.println("Erro: arquivo n\u00e3o encontrado");
    }
    catch (TokenMgrError e)
    {
      System.out.println("Erro l\u00e9xico\n" + e.getMessage());
    }
    catch (ParseException e)
    {
      System.out.println("Erro sint\u00e1tico\n" + e.getMessage());
    }
  }
}

PARSER_END(CalculadoraDeValoresLogicos)

SKIP :
{
  " "
| "\t"
| "\r"
| "\n"
}

TOKEN [ IGNORE_CASE ] :
{
  < OP_LOGICO_E : "AND" >
| 
  < OP_LOGICO_OU : "OR" >
| 
  < VERDADEIRO :
    "1"
  | "true" >
| 
  < FALSO :
    "0"
  | "false" >
}

TOKEN :
{
  < IDENT :
    (
      "/*"
      (
        "a"
      | "b"
      | "d"
      | "f"
      | "g"
      | "h"
      | "i"
      | "j"
      | "k"
      | "l"
      | "m"
      | "n"
      | "o"
      | "p"
      | "q"
      | "r"
      | "s"
      | "t"
      | "v"
      | "x"
      | "z"
      | "w"
      | "k"
      | "y"
      )
    | [ "a"-"z" ] [ "a"-"z" ]
    )
    ([ "a"-"z" ])* "*/" >
| 
  < ATRIB : ":=" >
| 
  < IGUAL : "=" >
| 
  < REAL : ([ "0"-"9" ])* (".")? ([ "0"-"9" ])+ >
| 
  < HEXADECIMAL :
    "0"
    (
      "x"
    | "X"
    )
    ([ "0"-"9", "A"-"F", "a"-"f" ])+ >
| 
  < VARIAVEL : ([ "A"-"Z", "a"-"z" ]) ([ "A"-"Z", "a"-"z", "0"-"9" ])* >
| 
  < OP_LOGICO_JAVA :
   "!" >
| 
  < OP_RELACIONAL :
    ">"
  | ">="
  | "<"
  | "<=" >
| 
  < OP_RELACIONAL_JAVA :
    "!="
  | "==" >
| 
  < OP_RELACIONAL_PASCAL : "<>" >
| 
  < ABRE_PARENTESES : "(" >
| 
  < FECHA_PARENTESES : ")" >
| 
  < ADICAO : "+" >
| 
  < SUBTRACAO : "-" >
| 
  < MULTIPLICACAO : "*" >
| 
  < DIVISAO : "/" >
| 
  < MODULO : " %" >
| 
  < PT_VIRG : ";" >
}

void inicio() :
{
  boolean resultado;
}
{
  (
    resultado = expressao()
    {
      System.out.println("resultado > "+(resultado ? 1 : 0));
    }
  )*
  < EOF >
}

boolean expressao() :
{
  boolean a, b;
  Token t;
}
{

  a = termo()
  (
    < OP_LOGICO_OU > b = termo()
    {
      a = a || b;
    }
  )*
  {System.out.println(a + " > expressao");
    return a;
  }
}

boolean termo() :
{
  boolean a, b;
  Token t;
}
{
 
   a = fator()
  
  (
    < OP_LOGICO_E > b = fator()
    {
      a = a && b;
    }
  )*
 
  { 
    
    return a;
  }
}

boolean fator() :
{
  Token t;
  boolean res;
}
{

 t= < OP_LOGICO_JAVA >

 {System.out.println(t.image + " ");
 
    return !fator();
  }
|

 t= < VERDADEIRO >
  {System.out.println(t.image + " ");
    return true;
  }
|

 t= < FALSO >
  {System.out.println(t.image + " ");
    return false;
  }

| 
  < ABRE_PARENTESES > res = expressao() < FECHA_PARENTESES >
  {
    
    return res;
  }
  

 
}
